# curso_platzi_langchain_y_langraph

./: .gitignore  README.md  docker-compose.yml  langgraph.json  pyproject.toml
notebooks/: 01-notebook.ipynb  02-simple.ipynb  03-messages.ipynb  04-llm.ipynb  05-rag.ipynb  06-chaining.ipynb  07-structured_output.ipynb  09-prompting.ipynb  10-tools.ipynb  11-conditions.ipynb  11-parallization.ipynb  12-random.ipynb
src/agents/: code_review.py  evaluator.py  main.py  orchestrator.py  orchestrator_doc.py  rag.py  react.py  simple.py
src/agents/support/: agent.py  state.py
src/agents/support/nodes/booking/: node.py  prompt.py  tools.py
src/agents/support/nodes/conversation/: node.py  promt.py  tools.py
src/agents/support/nodes/extractor/: node.py  promt.py
src/agents/support/routes/intent/: prompt.py  route.py
src/api/: db.py  main.py
