[project]
name = "couse-agents-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "langchain[anthropic,google-genai,openai]>=1.2.16",
    "langgraph>=1.1.10",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "langgraph-cli[inmem]>=0.4.24",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
