[project]
name = "couse-agents-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.3",
    "jinja2>=3.1.6",
    "langchain[anthropic,google-genai,openai]>=1.2.16",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "langgraph-cli[inmem]>=0.4.24",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
